--- a/Mission.WebUI/web.config
+++ b/Mission.WebUI/web.config
@@ -8,12 +8,32 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <connectionStrings>
+    <add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=True;Initial Catalog=Mission.Domain.Contexts.EFDbContext;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="1.0.0.0" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <membership>
+      <providers>
+        <clear/>
+        <add name="CustomMembershipProvider"
+              type="Mission.WebUI.ViewModels.Membership.CustomMembershipProvider"
+              connectionStringName="ApplicationServices"
+              enablePasswordRetrieval="false"
+              enablePasswordReset="true"
+              requiresQuestionAndAnswer="false"
+              requiresUniqueEmail="false"
+              maxInvalidPasswordAttempts="5"
+              minRequiredPasswordLength="6"
+              minRequiredNonalphanumericCharacters="0"
+              passwordAttemptWindow="10"
+              applicationName="/" />
+      </providers>
+    </membership>
     <authorization>
       <allow roles="Admin" />
     </authorization>
