--- a/Mission.WebUI/web.config
+++ b/Mission.WebUI/web.config
@@ -17,11 +17,11 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <membership>
+    <membership defaultProvider="CustomMembershipProvider">
       <providers>
         <clear/>
         <add name="CustomMembershipProvider"
-              type="Mission.WebUI.ViewModels.Membership.CustomMembershipProvider"
+              type="Mission.WebUI.ViewModels.CustomMembershipProvider"
               connectionStringName="ApplicationServices"
               enablePasswordRetrieval="false"
               enablePasswordReset="true"
