--- a/Mission.Domain/Mission.Domain.csproj
+++ b/Mission.Domain/Mission.Domain.csproj
@@ -56,13 +56,38 @@
     <Compile Include="Entities\Post.cs" />
     <Compile Include="Entities\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
     <Compile Include="Repositories\Abstract\IRepository.cs" />
     <Compile Include="Repositories\FakeRepo.cs" />
     <Compile Include="Repositories\Repository.cs" />
+    <Compile Include="_Mission_Domain_Contexts_EFDbContextDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>_Mission_Domain_Contexts_EFDbContextDataSet.xsd</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="_Mission_Domain_Contexts_EFDbContextDataSet.xsc">
+      <DependentUpon>_Mission_Domain_Contexts_EFDbContextDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="_Mission_Domain_Contexts_EFDbContextDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>_Mission_Domain_Contexts_EFDbContextDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="_Mission_Domain_Contexts_EFDbContextDataSet.xss">
+      <DependentUpon>_Mission_Domain_Contexts_EFDbContextDataSet.xsd</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="LICENSE.txt" />
