--- a/Mission.WebUI/web.config
+++ b/Mission.WebUI/web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=True;Initial Catalog=Mission.Domain.Contexts.EFDbContext;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
+    <add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=True;Initial Catalog=Mission.Domain.Contexts.EFDbContext;MultipleActiveResultSets=true; Pooling = false;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="1.0.0.0" />
