--- a/Mission.WebUI/Mission.WebUI.csproj
+++ b/Mission.WebUI/Mission.WebUI.csproj
@@ -1878,6 +1878,12 @@
     <Content Include="Content\Kendo\styles\textures\glass.png" />
     <Content Include="Content\Kendo\styles\textures\highlight.png" />
     <Content Include="Content\Kendo\vsdoc\kendo.web-vsdoc.js" />
+    <Content Include="Content\Media\Images\IMG_0021.JPG" />
+    <Content Include="Content\Media\Images\IMG_0022.JPG" />
+    <Content Include="Content\Media\Images\IMG_0023.JPG" />
+    <Content Include="Content\Media\Images\IMG_0024.JPG" />
+    <Content Include="Content\Media\Images\IMG_0025.JPG" />
+    <Content Include="Content\Media\Images\IMG_1161.MOV" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
@@ -2023,9 +2029,7 @@
     <None Include="Content\Kendo\styles\Silver\Thumbs.db" />
     <None Include="Content\Kendo\styles\textures\Thumbs.db" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Content\Media\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
