--- a/Mission.WebUI/Mission.WebUI.csproj
+++ b/Mission.WebUI/Mission.WebUI.csproj
@@ -70,6 +70,7 @@
   <ItemGroup>
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\DefaultController.cs" />
+    <Compile Include="Controllers\EventController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PostController.cs" />
     <Compile Include="Controllers\StatisticsController.cs" />
@@ -2029,6 +2030,7 @@
     <None Include="Content\Kendo\styles\Silver\Thumbs.db" />
     <None Include="Content\Kendo\styles\textures\Thumbs.db" />
     <Content Include="Views\Post\Blog.cshtml" />
+    <Content Include="Views\Event\Index.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
