Slider och kunder

--- a/Mission.WebUI/Mission.WebUI.csproj
+++ b/Mission.WebUI/Mission.WebUI.csproj
@@ -118,6 +118,12 @@
     <Content Include="Content\img\icon-phone.png" />
     <Content Include="Content\img\icon-tags.png" />
     <Content Include="Content\img\icon-user.png" />
+    <Content Include="Content\img\kunder\01.png" />
+    <Content Include="Content\img\kunder\02.png" />
+    <Content Include="Content\img\kunder\03.png" />
+    <Content Include="Content\img\kunder\04.png" />
+    <Content Include="Content\img\kunder\05.png" />
+    <Content Include="Content\img\kunder\06.png" />
     <Content Include="Content\img\logo.png" />
     <Content Include="Content\img\noise.png" />
     <Content Include="Content\img\oblique-lines.png" />
@@ -150,6 +156,18 @@
     <Content Include="Content\img\social\youtube.png" />
     <Content Include="Content\img\tags.png" />
     <Content Include="Content\img\top-open.png" />
+    <Content Include="Content\img\slides\_A8B2972.tif" />
+    <Content Include="Content\img\slides\_A8B2987.tif" />
+    <Content Include="Content\img\slides\_A8B3010.tif" />
+    <Content Include="Content\img\slides\_A8B3124.tif" />
+    <Content Include="Content\img\slides\_A8B3170.tif" />
+    <Content Include="Content\img\slides\_A8B3301.tif" />
+    <Content Include="Content\img\slides\_A8B3327.tif" />
+    <Content Include="Content\img\slides\_A8B3399.tif" />
+    <Content Include="Content\img\slides\_A8B3418.tif" />
+    <Content Include="Content\img\slides\_A8B3520.tif" />
+    <Content Include="Content\img\slides\_A8B3534.tif" />
+    <Content Include="Content\img\slides\_A8B3539.tif" />
     <Content Include="Content\js\css3-mediaqueries.js" />
     <Content Include="Content\js\custom.js" />
     <Content Include="Content\js\form-validation.js" />
