--- a/Mission.Domain/Mission.Domain.csproj
+++ b/Mission.Domain/Mission.Domain.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Entities\Abstract\IEntity.cs" />
     <Compile Include="Entities\Comment.cs" />
     <Compile Include="Entities\Event.cs" />
+    <Compile Include="Entities\EventQuestion.cs" />
     <Compile Include="Entities\FakeData\FakeData.cs" />
     <Compile Include="Entities\Post.cs" />
     <Compile Include="Entities\User.cs" />
