--- a/Mission.Domain/Mission.Domain.csproj
+++ b/Mission.Domain/Mission.Domain.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{4C5F60C7-B6CA-4BEC-A185-BB1A0A4B0A4F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Mission.WebUI</RootNamespace>
+    <RootNamespace>Mission.Domain</RootNamespace>
     <AssemblyName>Mission.Domain</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
