--- a/Mission.Domain/Mission.Domain.csproj
+++ b/Mission.Domain/Mission.Domain.csproj
@@ -52,7 +52,7 @@
   <ItemGroup>
     <Compile Include="Contexts\EFDbContext.cs" />
     <Compile Include="Entities\Abstract\IEntity.cs" />
-    <Compile Include="Entities\Answere.cs" />
+    <Compile Include="Entities\Answer.cs" />
     <Compile Include="Entities\Comment.cs" />
     <Compile Include="Entities\Event.cs" />
     <Compile Include="Entities\EventQuestion.cs" />
