--- a/Mission.WebUI/Mission.WebUI.csproj
+++ b/Mission.WebUI/Mission.WebUI.csproj
@@ -74,7 +74,6 @@
     <Compile Include="Controllers\EventController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PostController.cs" />
-    <Compile Include="Controllers\StatisticsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -2560,9 +2559,6 @@
     <Content Include="Views\Post\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Statistics\Index.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="Views\Shared\_News.cshtml" />
   </ItemGroup>
   <ItemGroup>
@@ -2645,6 +2641,8 @@
     <Content Include="Views\Event\CreateAnswer.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\AnswerVM.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\LogOn.cshtml" />
+    <Content Include="Views\Event\EventStatistic.cshtml" />
+    <Content Include="Views\Event\Statistics.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
