--- a/Mission.WebUI/Mission.WebUI.csproj
+++ b/Mission.WebUI/Mission.WebUI.csproj
@@ -2641,8 +2641,7 @@
     <Content Include="Views\Event\CreateAnswer.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\AnswerVM.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\LogOn.cshtml" />
-    <Content Include="Views\Event\EventStatistic.cshtml" />
-    <Content Include="Views\Event\Statistics.cshtml" />
+    <Content Include="Views\Event\EventStatistics.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
