--- a/Mission.Domain/Mission.Domain.csproj
+++ b/Mission.Domain/Mission.Domain.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Entities\EventQuestion.cs" />
     <Compile Include="Entities\FakeData\FakeData.cs" />
     <Compile Include="Entities\Post.cs" />
+    <Compile Include="Entities\Subscriber.cs" />
     <Compile Include="Entities\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
