--- a/Mission.WebUI/Mission.WebUI.csproj
+++ b/Mission.WebUI/Mission.WebUI.csproj
@@ -100,6 +100,8 @@
     <Content Include="Content\css\superfish.css" />
     <Content Include="Content\css\widgets.css" />
     <Content Include="Content\img\actionplant_mini.png" />
+    <Content Include="Content\img\actionplant_mini_green.png" />
+    <Content Include="Content\img\actionplant_min_whitei.png" />
     <Content Include="Content\img\alpha.png" />
     <Content Include="Content\img\arrows.png" />
     <Content Include="Content\img\date.png" />
@@ -115,6 +117,7 @@
     <Content Include="Content\img\dummies\featured-7.jpg" />
     <Content Include="Content\img\dummies\featured-8.jpg" />
     <Content Include="Content\img\dummies\featured-9.jpg" />
+    <Content Include="Content\img\Facebook-f.png" />
     <Content Include="Content\img\facebook_logo.gif" />
     <Content Include="Content\img\facebook_logo.jpg" />
     <Content Include="Content\img\FilmRoll2.png" />
@@ -2654,6 +2657,7 @@
     <Content Include="Views\Event\Overview.cshtml" />
     <Content Include="Views\Event\SingleEvent.cshtml" />
     <Content Include="Views\Home\_Unsubscribe.cshtml" />
+    <Content Include="Views\Home\_Subscribe.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
