Statiska sidor pågående, footer nästan klae

--- a/Mission.WebUI/Mission.WebUI.csproj
+++ b/Mission.WebUI/Mission.WebUI.csproj
@@ -2658,6 +2658,7 @@
     <Content Include="Views\Event\SingleEvent.cshtml" />
     <Content Include="Views\Home\_Unsubscribe.cshtml" />
     <Content Include="Views\Home\_Subscribe.cshtml" />
+    <Content Include="Views\Home\Lectures.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
