--- a/Mission.WebUI/Mission.WebUI.csproj
+++ b/Mission.WebUI/Mission.WebUI.csproj
@@ -104,6 +104,10 @@
     <Content Include="Content\img\actionplant_min_whitei.png" />
     <Content Include="Content\img\alpha.png" />
     <Content Include="Content\img\arrows.png" />
+    <Content Include="Content\img\background.png" />
+    <Content Include="Content\img\background2.png" />
+    <Content Include="Content\img\background3.jpg" />
+    <Content Include="Content\img\background4.png" />
     <Content Include="Content\img\date.png" />
     <Content Include="Content\img\div-line.png" />
     <Content Include="Content\img\dummies\54x54.gif" />
@@ -121,6 +125,7 @@
     <Content Include="Content\img\facebook_logo.gif" />
     <Content Include="Content\img\facebook_logo.jpg" />
     <Content Include="Content\img\FilmRoll2.png" />
+    <Content Include="Content\img\FilmRoll2_white.png" />
     <Content Include="Content\img\footer.png" />
     <Content Include="Content\img\glyphicons\glyphicons_000_glass.png" />
     <Content Include="Content\img\glyphicons\glyphicons_001_leaf.png" />
@@ -537,6 +542,8 @@
     <Content Include="Content\img\kunder\05.png" />
     <Content Include="Content\img\kunder\06.png" />
     <Content Include="Content\img\logo.png" />
+    <Content Include="Content\img\logo120.png" />
+    <Content Include="Content\img\logo250.png" />
     <Content Include="Content\img\logotype.jpg" />
     <Content Include="Content\img\new_tile.png" />
     <Content Include="Content\img\noise.png" />
