--- a/Mission.WebUI/Mission.WebUI.csproj
+++ b/Mission.WebUI/Mission.WebUI.csproj
@@ -123,6 +123,7 @@
     <Content Include="Content\img\dummies\featured-8.jpg" />
     <Content Include="Content\img\dummies\featured-9.jpg" />
     <Content Include="Content\img\Facebook-f.png" />
+    <Content Include="Content\img\facebook104.png" />
     <Content Include="Content\img\facebook_logo.gif" />
     <Content Include="Content\img\facebook_logo.jpg" />
     <Content Include="Content\img\FilmRoll2.png" />
@@ -544,6 +545,7 @@
     <Content Include="Content\img\kunder\06.png" />
     <Content Include="Content\img\kunder\07.png" />
     <Content Include="Content\img\kunder\08.png" />
+    <Content Include="Content\img\linkedin104.png" />
     <Content Include="Content\img\logo.png" />
     <Content Include="Content\img\logo120.png" />
     <Content Include="Content\img\logo250.png" />
@@ -595,7 +597,9 @@
     <Content Include="Content\img\slides\_A8B3520.tif" />
     <Content Include="Content\img\slides\_A8B3534.tif" />
     <Content Include="Content\img\slides\_A8B3539.tif" />
+    <Content Include="Content\img\twitter104.png" />
     <Content Include="Content\img\wild_oliva.png" />
+    <Content Include="Content\img\youtube104.png" />
     <Content Include="Content\js\comments.js" />
     <Content Include="Content\js\css3-mediaqueries.js" />
     <Content Include="Content\js\custom.js" />
@@ -2675,6 +2679,7 @@
     <Content Include="Views\Home\Lectures.cshtml" />
     <Content Include="Views\Shared\_SearchResult.cshtml" />
     <Content Include="Views\Post\Search.cshtml" />
+    <Content Include="Views\Post\Arkiv.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
