--- a/Mission.WebUI/Mission.WebUI.csproj
+++ b/Mission.WebUI/Mission.WebUI.csproj
@@ -2667,7 +2667,6 @@
     <Content Include="Views\Shared\_PostMeta.cshtml" />
     <Content Include="Views\Event\CreateEventQuestion.cshtml" />
     <Content Include="Views\Event\CreateAnswer.cshtml" />
-    <Content Include="Views\Shared\EditorTemplates\AnswerVM.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\LogOn.cshtml" />
     <Content Include="Views\Event\EventStatistics.cshtml" />
     <Content Include="Views\Event\Overview.cshtml" />
@@ -2679,8 +2678,12 @@
     <Content Include="Views\Post\Search.cshtml" />
     <Content Include="Views\Event\OpenEvents.cshtml" />
     <Content Include="Views\Event\EventForCompany.cshtml" />
+    <Content Include="Views\Event\YearsStatistics.cshtml" />
+    <Content Include="Views\Shared\DisplayTemplates\EventQuestion.cshtml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Views\Shared\EditorTemplates\" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
