--- a/Mission.Domain/Mission.Domain.csproj
+++ b/Mission.Domain/Mission.Domain.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Entities\SearchResult.cs" />
     <Compile Include="Entities\Subscriber.cs" />
     <Compile Include="Entities\User.cs" />
+    <Compile Include="Entities\Words.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
