--- a/Mission.WebUI/web.config
+++ b/Mission.WebUI/web.config
@@ -50,7 +50,9 @@
     <authentication mode="Forms">
       <forms loginUrl="~/Account/LogOn" timeout="2880" />
     </authentication>
-    <pages >
+
+    <httpRuntime requestValidationMode="2.0" />
+    <pages validateRequest="false">
       <namespaces>
         <add namespace="System.Web.Helpers" />
         <add namespace="System.Web.Mvc" />
@@ -80,4 +82,6 @@
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
+  
+  
 </configuration>
