--- a/Mission.WebUI/Mission.WebUI.csproj
+++ b/Mission.WebUI/Mission.WebUI.csproj
@@ -1153,6 +1153,9 @@
     <None Include="Content\tinymce\examples\media\sample.flv" />
     <None Include="Content\tinymce\examples\media\sample.ram" />
     <None Include="Content\tinymce\examples\media\sample.rm" />
+    <Content Include="Views\Home\EditPromise.cshtml" />
+    <Content Include="Views\Home\EditInformation.cshtml" />
+    <Content Include="Views\Home\EditEducations.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Content\tinymce\jscripts\tiny_mce\plugins\spellchecker\classes\utils\" />
