--- a/Mission.WebUI/packages.config
+++ b/Mission.WebUI/packages.config
@@ -8,4 +8,6 @@
   <package id="jQuery.vsdoc" version="1.5.1" targetFramework="net40" />
   <package id="Modernizr" version="1.7" targetFramework="net40" />
   <package id="Ninject" version="3.0.1.10" targetFramework="net40" />
+  <package id="PagedList" version="1.15.0.0" targetFramework="net40" />
+  <package id="PagedList.Mvc" version="3.18.0.0" targetFramework="net40" />
 </packages>
