--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Mission.Domain\packages.config" />
+  <repository path="..\Mission.UnitTest\packages.config" />
   <repository path="..\Mission.WebUI\packages.config" />
 </repositories>
