--- a/Mission.WebUI/Mission.WebUI.csproj
+++ b/Mission.WebUI/Mission.WebUI.csproj
@@ -697,6 +697,9 @@
     <Content Include="Content\js\prettyPhoto\js\jquery-1.4.4.min.js" />
     <Content Include="Content\js\prettyPhoto\js\jquery.prettyPhoto.js" />
     <Content Include="Content\js\prettyPhoto\xhr_response.html" />
+    <Content Include="Content\js\preview\index.html" />
+    <Content Include="Content\js\preview\jquery.js" />
+    <Content Include="Content\js\preview\main.js" />
     <Content Include="Content\js\resizeable.js" />
     <Content Include="Content\js\subscriber.js" />
     <Content Include="Content\js\superfish-1.4.8\changelog.txt" />
