--- a/Mission.WebUI/Mission.WebUI.csproj
+++ b/Mission.WebUI/Mission.WebUI.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\Account.cs" />
     <Compile Include="ViewModels\BlogComments.cs" />
+    <Compile Include="ViewModels\ChangePassword.cs" />
     <Compile Include="ViewModels\CustomMembershipProvider.cs" />
     <Compile Include="ViewModels\vm_AboutAndCustomers.cs" />
     <Compile Include="ViewModels\vm_AnswerEventQuestion.cs" />
@@ -1166,6 +1167,8 @@
     <Content Include="Views\Home\EditInformation.cshtml" />
     <Content Include="Views\Home\EditEducations.cshtml" />
     <Content Include="Views\Home\PressKit.cshtml" />
+    <Content Include="Views\Home\StartingPoint.cshtml" />
+    <Content Include="Views\Home\_ChangePassword.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Content\Media\PressKit\" />
