fuck it, byta lösen får en egen sida...

--- a/Mission.WebUI/Mission.WebUI.csproj
+++ b/Mission.WebUI/Mission.WebUI.csproj
@@ -1168,7 +1168,7 @@
     <Content Include="Views\Home\EditEducations.cshtml" />
     <Content Include="Views\Home\PressKit.cshtml" />
     <Content Include="Views\Home\StartingPoint.cshtml" />
-    <Content Include="Views\Home\_ChangePassword.cshtml" />
+    <Content Include="Views\Home\ChangePassword.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Content\Media\PressKit\" />
